feat: add verify code loading and error states handling

--- a/lib/src/core/constant/localization/translations/intl_ru.arb
+++ b/lib/src/core/constant/localization/translations/intl_ru.arb
@@ -3,5 +3,6 @@
   "appTitle": "Хвостики",
   "enterCodeTitle": "Ввод кода\nподтверждения",
   "enterCodeSubtitle": "Вам позвонит робот на номер",
-  "callAgain": "Перезвонить еще раз"
+  "callAgain": "Перезвонить еще раз",
+  "tryLater": "Произошла ошибка. Попробуйте позже."
 }
