feat: add modal design

--- a/lib/src/core/constant/localization/translations/intl_ru.arb
+++ b/lib/src/core/constant/localization/translations/intl_ru.arb
@@ -40,5 +40,12 @@
     }
   },
   "dog": "Собака",
-  "cat": "Кошка"
+  "cat": "Кошка",
+  "monday": "Пн",
+  "tuesday": "Вт",
+  "wednesday": "Ср",
+  "thursday": "Чт",
+  "friday": "Пт",
+  "saturday": "Сб",
+  "sunday": "Вс"
 }
