feat: add pet details error state

--- a/lib/src/core/constant/localization/translations/intl_ru.arb
+++ b/lib/src/core/constant/localization/translations/intl_ru.arb
@@ -57,5 +57,6 @@
   "breed": "Порода",
   "gender": "Пол",
   "male": "Мужской",
-  "female": "Женский"
+  "female": "Женский",
+  "error": "Ошибка"
 }
