--- a/lib/src/core/constant/localization/translations/intl_ru.arb
+++ b/lib/src/core/constant/localization/translations/intl_ru.arb
@@ -58,5 +58,9 @@
   "gender": "Пол",
   "male": "Мужской",
   "female": "Женский",
-  "error": "Ошибка"
+  "error": "Ошибка",
+  "deletePetTitle": "Удалить питомца",
+  "deletePetSubtitle": "Вы уверены, что хотите удалить этого питомца? Это действие нельзя будет отменить.",
+  "deletePetCancel": "Отмена",
+  "deletePetDelete": "Удалить"
 }
